# nuopc-app-prototypes

./: .gitignore  CMakeLists.txt  components.yaml
AtmOcnMirrorFieldsProto/: atm.F90
AtmOcnPetListProto/: atm.F90  esm.F90  ocn.F90
DeepHierarchyProto/: CMakeLists.txt  README  atm.F90  deepApp.F90  dyn.F90  esm.F90  ocn.F90  phy.F90  phyDrv.F90  rad.F90
DeepHierarchy_SharedPointer_Proto/: CMakeLists.txt  atm.F90  deep_sharedptr_app.F90  dyn.F90  esm.F90  ocn.F90  phy.F90  phyDrv.F90  rad.F90
HierarchyProto/: CMakeLists.txt  atm.F90  dyn.F90  esm.F90  phy.F90
SinglePetHierarchy/: CMakeLists.txt  atm.F90  esm.F90  single_pet_esmApp.F90
atmhierarchy/: CMakeLists.txt  README  atm.F90  atm_hierarchy.F90  dyn.F90  moist.F90  phy.F90  rad.F90
atmhierarchy_bypass_driver/: .atm.F90.swp  CMakeLists.txt  atm.F90  atm_hierarchy_custom_run.F90
atmhierarchy_e2e_i2i/: CMakeLists.txt  atm.F90
atmhierarchy_flat/: CMakeLists.txt  README  atm.F90  atm_hierarchy_flat.F90  dyn.F90  moist.F90  rad.F90
error_handling/: CMakeLists.txt  error_handling.F90  error_handling.h
mapl_reimplementation/: CMakeLists.txt  MAPL_redu.F90
model_components/: CMakeLists.txt  dyn.F90  geoslike_physics.F90  moist.F90  moist_phy_med.F90  physics.F90  rad.F90  rad_phy_med.F90
